Anonymous | Login | 2021-01-23 11:57 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0029324 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2017-11-15 10:26 | 2020-08-28 13:25 | ||||||||
Reporter | emv | ||||||||||||
Assigned To | emv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | [OCCT] 7.2.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0029324: Incomplete result of Volume Maker algorithm | ||||||||||||
Description | The result produced by the Volume Maker algorithm on the attached set of faces is incomplete. Instead of three solids, only two solids are produced. The problem is that the third solid should be non-manifold. | ||||||||||||
Steps To Reproduce | restore [locate_data_file bug29324_faces.brep] lf mkvolume result lf -c -ai checknbshapes result -solid 3 | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | ![]() | ||||||||||||
![]() |
|
(0072254) git (administrator) 2017-11-15 10:45 |
Branch CR29324 has been created by emv. SHA-1: 067edee488c203cf0f3ebf4e2e4bcadf42aed5a0 Detailed log of new commits: Author: emv Date: Wed Nov 15 10:45:14 2017 +0300 0029324: Incomplete result of Volume Maker algorithm When splitting the shells (BOPAlgo_ShellSplitter::SplitBlock()) on multi-connected edges avoid producing shell with odd number of faces on any edges. Test case for the issue. |
![]() |
|||
Date Modified | Username | Field | Change |
2017-11-15 10:26 | emv | New Issue | |
2017-11-15 10:26 | emv | Assigned To | => msv |
2017-11-15 10:26 | emv | Assigned To | msv => emv |
2017-11-15 10:26 | emv | Status | new => assigned |
2017-11-15 10:27 | emv | File Added: bug29324_faces.brep | |
2017-11-15 10:28 | emv | Steps to Reproduce Updated | View Revisions |
2017-11-15 10:45 | git | Note Added: 0072254 | |
2017-11-15 11:02 | emv | Description Updated | View Revisions |
2019-08-12 16:43 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-08-28 13:25 | emv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |