0029324: Incomplete result of Volume Maker algorithm

When splitting the shells (BOPAlgo_ShellSplitter::SplitBlock()) on multi-connected edges avoid producing shell with odd number of faces on any edges.

Test case for the issue.